--- a/TransformadorUniversalCoordenadas/App.config
+++ b/TransformadorUniversalCoordenadas/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Epsg" connectionString="Data Source=C:\ProgramData\Digi3D.NET\OpenGis\epsg.sdf"/>
+    <add name="Epsg" connectionString="Data Source=C:\ProgramData\Digi3D.NET\OpenGis\epsg_es_ES.sdf"/>
   </connectionStrings>
   <appSettings>
     <add key="OpenGisFiles" value="C:\ProgramData\Digi3D.NET\OpenGis\"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
